# Ventionlab

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml
.github/workflows/: dev.yaml  feature.yaml  lint.yaml  test.yaml
backend/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/api/: urls.py  views.py
backend/apps/courses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
backend/apps/courses/migrations/: 0001_initial.py  0002_category_tag_course_language_alter_course_level_and_more.py  0003_alter_course_category_alter_course_level_and_more.py  0004_comment.py
backend/apps/courses/serializers/: courses.py
backend/apps/registration/: views.py
backend/apps/users/: admin.py  forms.py  models.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_userincourse_options_and_more.py
backend/apps/users/services/: queries.py
backend/common/: models.py
backend/common/utils/: jwt.py
backend/config/: asgi.py  settings.py  urls.py
backend/static/: script.js  style.css
backend/templates/: base.html  header.html  index.html
backend/templates/courses/: detail.html  list.html
backend/templates/registration/: login.html
backend/tests/: conftest.py  factories.py  test_courses.py  test_courses_crud.py  test_for_DRF_API.py
docs/: erd.drawio
docs/requirements/: srs.md
frontend/: .env.sample  .eslintrc.cjs  Dockerfile  README.md  index.html  package.json
frontend/src/: App.tsx  config.ts
frontend/src/components/: LanguageSelect.tsx  ToggleModeSwitch.tsx
(+26 files in other folders)
